# map2drone

./: .gitignore  README.md
.github/workflows/: backend-ci.yml  frontend-ci.yml  keep-warm.yml
backend/: map2drone.db  map2drone_v2.db  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: __init__.py
backend/app/api/v1/: __init__.py  endpoints.py
backend/app/core/: auth.py  config.py  database.py  seed_data.py
backend/app/models/: __init__.py  schemas.py
backend/app/modules/: __init__.py
backend/app/modules/export/: __init__.py  base.py  dji_kmz.py  dji_wpml.py  factory.py  geojson.py  gpx.py  kml.py  kmz.py  litchi.py  mavlink.py  mission_planner.py  models.py  qgc.py
backend/app/modules/planning/: elevation.py  engine.py
backend/app/schemas/: __init__.py  schemas.py
backend/tests/: test_export.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo  vercel.json
frontend/public/: ads.txt
frontend/src/: index.css  main.tsx  vite-env.d.ts
frontend/src/app/: App.tsx
frontend/src/app/layouts/: LayerPanel.tsx  MainLayout.tsx  Sidebar.tsx  StatusBar.tsx  sidebarStore.ts
frontend/src/modules/about/: AboutPage.tsx
frontend/src/modules/auth/: LandingPage.tsx  LoginPage.tsx  ProtectedRoute.tsx  RegisterPage.tsx  authStore.ts
frontend/src/modules/export/: ExportPanel.tsx  exportStore.ts
frontend/src/modules/map/: DrawLayers.tsx  DrawingToolbar.tsx  FlightLinesLayer.tsx  MapView.tsx  MeasureInfo.tsx  drawStore.ts  polygonImport.ts  store.ts  (+1 more)
scripts/: seed-data.sql  setup-db.ps1
(+16 files in other folders)
